--- a/content/css/style.css
+++ b/content/css/style.css
@@ -5,6 +5,7 @@
     padding: 0;
     box-sizing: border-box;
     border: none;
+    overflow: hidden;
     font-family: 'Poppins', sans-serif;
     color: whitesmoke;
 }
