--- a/content/css/style.css
+++ b/content/css/style.css
@@ -196,7 +196,7 @@ span{
 }
 
 #projects-container .card {
-    background: transparent;
+    background-color: rgb(0 0 0 / 0.5);
     border: 3px solid #b74b4b;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
