--- a/content/css/style.css
+++ b/content/css/style.css
@@ -253,6 +253,62 @@ span{
     transform: scale(1.1);
 }
 
+.html {
+    color: #F16524;
+    font-weight: bold;
+}
+
+.css {
+    color: #66309A;
+    font-weight: bold;
+}
+
+.js {
+    color: #F7E018;
+    font-weight: bold;
+}
+
+.ts {
+    color: #007acc;
+    font-weight: bold;
+}
+
+.php {
+    color: #787CB5;
+    font-weight: bold;
+}
+
+.python {
+    background: linear-gradient(to right, #306998 50%, #FFD43B 50%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    font-weight: bold;
+}
+
+.ruby {
+    color: #CC342D;
+    font-weight: bold;
+}
+
+.bootstrap {
+    color: #563d7c;
+    font-weight: bold;
+}
+
+.api {
+    color: #FF8C00;
+    font-weight: bold;
+}
+
+.rpgmakerxp {
+    background: radial-gradient(circle, #FFD43B 63%, #333333 37%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    font-weight: bold;
+}
+
 /* Contact page */
 #contactimage {
     width: 34vh;
