--- a/content/css/style.css
+++ b/content/css/style.css
@@ -252,6 +252,26 @@ span{
     color: white;
     transform: scale(1.1);
 }
+  
+.style summary {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+  
+.style summary::after {
+    content: '';
+    border: solid;
+    border-width: 0 3px 3px 0;
+    display: inline-block;
+    padding: 4px;
+    transition: 0.3s;
+    transform: rotate(45deg);
+}
+  
+details[open].style > summary::after {
+    transform: rotate(-135deg);
+}
 
 .html {
     color: #F16524;
